<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.example.mohamedabdelaziz.project1.LoginActivity.LoginAcivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:layout_width="@dimen/logo_dims"
            android:layout_height="@dimen/logo_dims"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:background="@drawable/logo" />


        <android.support.design.widget.TextInputLayout
            android:layout_width="@dimen/login_text_w"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_text_hint"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:padding="10dp"
                android:textColor="#000"
                android:textSize="@dimen/textsize_m" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="@dimen/login_text_w"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_text_hint"
                android:imeOptions="actionGo"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="10dp"
                android:textColor="#000"
                android:textSize="@dimen/textsize_m" />
        </android.support.design.widget.TextInputLayout>

        <FrameLayout
            android:layout_width="@dimen/login_btn_w"
            android:layout_height="@dimen/logo_btn_h"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/login_view" />

            <com.balysv.materialripple.MaterialRippleLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:background="#0FFF">

                <Button
                    android:id="@+id/login_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#0fFF"
                    android:text="@string/login_button"
                    android:textColor="#FFF"
                    android:textSize="@dimen/textsize_l"
                    android:textStyle="bold" />
            </com.balysv.materialripple.MaterialRippleLayout>
        </FrameLayout>
    </LinearLayout>


</ScrollView>
