<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/main_fragment" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardBackgroundColor="@color/white"
            card_view:cardCornerRadius="5dp"
            card_view:cardElevation="10dp"
            card_view:contentPadding="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/title1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/title1"
                    android:textColor="#000"
                    android:textSize="@dimen/textsize_m" />

                <View
                    android:id="@+id/view1"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/title1"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="#5888" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/card1_recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/view1"
                    android:layout_margin="10dp" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardBackgroundColor="@color/white"
            card_view:cardCornerRadius="5dp"
            card_view:cardElevation="10dp"
            card_view:contentPadding="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/title2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/title2"
                    android:textColor="#000"
                    android:textSize="@dimen/textsize_m" />

                <View
                    android:id="@+id/view2"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/title2"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="#5888" />

                <LinearLayout
                    android:layout_below="@id/view2"
                    android:id="@+id/linear"
                    android:weightSum="8"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <View
                        android:layout_width="25dp"
                        android:layout_margin="10dp"
                        android:layout_height="15dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:text="المشروع"
                        android:layout_height="wrap_content"
                        />
                    <View
                        android:layout_width="0dp"
                        android:layout_weight="4"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:text="الربح"
                        android:layout_height="wrap_content" />
                    <View
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:text="النسبه"
                        android:layout_height="wrap_content" />
                    <View
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/card2_recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/linear"
                    />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardBackgroundColor="@color/white"
            card_view:cardCornerRadius="5dp"
            card_view:cardElevation="10dp"
            card_view:contentPadding="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/title3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/title3"
                    android:textColor="#000"
                    android:textSize="@dimen/textsize_m" />

                <View
                    android:id="@+id/view3"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/title3"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="#5888" />

                <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/view3"
                    android:layout_centerHorizontal="true">

                    <TableRow android:padding="10dp">

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="20dp"
                            android:background="@drawable/home"
                            android:layout_height="20dp" />

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:text="ايجار مكتب" />
                    </TableRow>

                    <TableRow android:padding="10dp">

                        <ImageView
                            android:layout_width="20dp"
                            android:background="@drawable/car"
                            android:layout_height="20dp" />

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            />

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:text=" مواصلات" />
                    </TableRow>

                    <TableRow android:padding="10dp">

                        <ImageView
                            android:layout_width="20dp"
                            android:background="@drawable/user"
                            android:layout_height="20dp" />

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            />

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:text="مرتبات" />
                    </TableRow>

                    <TableRow android:padding="10dp">

                        <ImageView
                            android:layout_width="20dp"
                            android:background="@drawable/money"
                            android:layout_height="20dp" />

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            />

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:text="مصاريف اخرى" />
                    </TableRow>
                </TableLayout>
            </RelativeLayout>
        </android.support.v7.widget.CardView>
        <View
            android:layout_width="match_parent"
            android:layout_height="60dp"/>
    </LinearLayout>
</ScrollView>